# src/routesV1/private.ts
@@ -126,192 +126,236 @@ privateRoute.post(
 	}
 )
 
-privateRoute.post('/VerifyLegalParticipant', async (req: Request, res: Response): Promise<void> => {
-	/* Request Body :
-	 * 1. Participant URL : EG . https://greenworld.proofsense.in/.well-known/participant.json
-	 */
-	//todo : compliance check is remaining
-	try {
-		const { participantUrl } = req.body
-		const verificationStatus = {
-			holderSig: false,
-			issuerSig: false,
-			integritySig: false,
-			complianceCheck: true,
-			isLegalParticipant: false
-		}
+privateRoute.post(
+	'/verifyLegalParticipant',
+	check('policies')
+		.isArray()
+		.exists()
+		.custom((obj) => {
+			if (obj.length == 0) {
+				return false
+			}
+			for (const policy of obj) {
+				if (!AppConst.VERIFY_LP_POLICIES.includes(policy)) {
+					return false
+				}
+			}
 
-		console.log('fetching participant json...')
-		const participantJson = await Utils.fetchParticipantJson(participantUrl)
+			return true
+		}),
+	check('participantUrl').exists().isString().isURL(),
+	async (req: Request, res: Response): Promise<void> => {
+		/* Request Body :
+		 * 1. Participant URL : EG . https://greenworld.proofsense.in/.well-known/participant.json
+		 */
+		//todo : compliance check is remaining
+		try {
+			const errors = validationResult(req)
+			if (!errors.isEmpty()) {
+				const errorsArr = errors.array()
+				res.status(422).json({
+					error: `${errorsArr[0].msg} of param '${errorsArr[0].param}'`,
+					message: AppMessages.SIG_VERIFY_VALIDATION
+				})
+			} else {
+				const { participantUrl, policies } = req.body
+				const verificationStatus: any = {}
 
-		participantJson.selfDescriptionCredential.verifiableCredential.map((vc: any, index: number) => {
-			const integrityHash = `sha256-${createHash('sha256').update(JSON.stringify(vc)).digest('hex')}`
-			const credIntegrityHash = participantJson.complianceCredential.credentialSubject[index].integrity
+				console.log('fetching participant json...')
+				const participantJson = await Utils.fetchParticipantJson(participantUrl)
+				//check if VC not null or in other form
+				if (!participantJson.selfDescriptionCredential.verifiableCredential) {
+					console.log(`❌ No Verifiable Credential Found`)
+					res.status(400).json({
+						error: `VC not found`,
+						message: AppMessages.PARTICIPANT_VC_FOUND_FAILED
+					})
+					return
+				} else if (!Array.isArray(participantJson.selfDescriptionCredential.verifiableCredential)) {
+					console.log(`❌ Verifiable Credential isn't array`)
+					res.status(400).json({
+						error: `VC not valid`,
+						message: AppMessages.PARTICIPANT_VC_INVALID
+					})
+					return
+				}
 
-			const integrityCheck = integrityHash === credIntegrityHash
-			verificationStatus.integritySig = integrityCheck
-		})
+				// check if complianceCred not null
+				if (!participantJson.complianceCredential || !participantJson.complianceCredential.proof) {
+					console.log(`❌ Compliance Credential Not Found`)
+					res.status(400).json({
+						error: `Compliance Credential not found`,
+						message: AppMessages.COMPLIANCE_CRED_FOUND_FAILED
+					})
+					return
+				}
 
-		const { verifiableCredential, type } = participantJson.selfDescriptionCredential
-		if (type[0] != 'VerifiableCredential' && type[0] != 'VerifiablePresentation') {
-			console.log(`❌ Credential Type not supported`)
-			res.status(400).json({
-				error: `Credential Type not supported`
+				// check VC are of valid type
+				const { verifiableCredential, type } = participantJson.selfDescriptionCredential
+				if (type[0] != 'VerifiableCredential' && type[0] != 'VerifiablePresentation') {
+					console.log(`❌ Credential Type not supported`)
+					res.status(400).json({
+						error: `Credential Type not supported`
+					})
+					return
+				}
+				//fetching VC with subject type gx:LegalParticipant
+				const VC = verifiableCredential.find(async (vc: VerifiableCredentialDto) => {
+					return vc.credentialSubject.type === 'gx:LegalParticipant'
+				})
+				if (!VC) {
+					console.log(`❌ Verifiable Credential doesn't have type 'gx:LegalParticipant'`)
+					res.status(400).json({
+						error: `VC with type 'gx:LegalParticipant' not found!!`
+					})
+					return
+				}
+				for (const policy of policies) {
+					console.log(`Executing ${policy} check ...`)
+					switch (policy) {
+						case AppConst.VERIFY_LP_POLICIES[0]:
+							//integrity check
+							verificationStatus.integrityCheck = true
+							participantJson.selfDescriptionCredential.verifiableCredential.map((vc: any) => {
+								const integrityHash = `sha256-${createHash('sha256').update(JSON.stringify(vc)).digest('hex')}`
+								const credIntegrityHash = participantJson.complianceCredential.credentialSubject.find((cs: any) => cs.id == vc.credentialSubject.id).integrity
+								const integrityCheck = integrityHash === credIntegrityHash
+								if (!integrityCheck) {
+									verificationStatus.integrityCheck = integrityCheck
+									console.log(`❌ Integrity Failed`)
+								}
+							})
+							break
+						case AppConst.VERIFY_LP_POLICIES[1]:
+							//holder sig verification
+							const vcProof = VC.proof
+							const vcCredentialContent = VC
+							delete vcCredentialContent.proof
+							verificationStatus.holderSignature = await verification(vcCredentialContent, vcProof, true)
+							break
+						case AppConst.VERIFY_LP_POLICIES[2]:
+							// compliance sig verification
+							const complianceCred = participantJson.complianceCredential
+							verificationStatus.complianceSignature = await verifyGxCompliance(complianceCred)
+							VC.break
+						case AppConst.VERIFY_LP_POLICIES[3]:
+							verificationStatus.complianceCheck = true
+							break
+					}
+				}
+				verificationStatus.valid = true
+				for (const status in verificationStatus) {
+					verificationStatus.valid = verificationStatus.valid && verificationStatus[status]
+				}
+				res.status(200).json({
+					data: { ...verificationStatus },
+					message: 'verification successful'
+				})
+			}
+		} catch (error) {
+			res.status(500).json({
+				error: (error as Error).message,
+				message: AppMessages.SIG_VERIFY_FAILED
 			})
-			return
 		}
-
-		//fetching VC with subject type gx:LegalParticipant
-		const VC = verifiableCredential.find(async (vc: VerifiableCredentialDto) => {
-			return vc.credentialSubject.type === 'gx:LegalParticipant'
-		})
-
-		if (!VC) {
-			console.log(`❌ Verifiable Credential doesn't have type 'gx:LegalParticipant'`)
-			res.status(400).json({
-				error: `VC with type 'gx:LegalParticipant' not found!!`
-			})
-			return
-		}
-		const vcProof = VC.proof
-		const vcCredentialContent = VC
-		delete vcCredentialContent.proof
-		console.log('Verifying Holder Signature...')
-		const result = await verification(vcCredentialContent, vcProof, res, true)
-
-		if (typeof result == 'undefined') {
-			return
-		} else {
-			verificationStatus.holderSig = result
-		}
-
-		console.log('Verifying Issuer Signature...')
-
-		const gxResult = await verifyGxCompliance(vcCredentialContent, res)
-
-		if (typeof gxResult == 'undefined') {
-			return
-		} else {
-			verificationStatus.issuerSig = gxResult
-		}
-
-		verificationStatus.isLegalParticipant = verificationStatus.integritySig && verificationStatus.holderSig && verificationStatus.issuerSig && verificationStatus.complianceCheck
-		res.status(200).json({
-			...verificationStatus
-		})
-	} catch (error) {
-		console.log(error)
-		res.status(500).json({
-			error: (error as Error).message,
-			message: AppMessages.SIG_VERIFY_FAILED
-		})
 	}
-})
+)
 
 /**
  * @dev takes the credential and proof, and verifies the signature is valid or not
  * @param credentialContent the credential part which will be hashed for proof
  * @param proof the proof obj
- * @param res express response obj
  * @returns boolean - true if the signature is verified
  */
-const verification = async (credentialContent: any, proof: any, res: Response, checkSSLwithRegistry: boolean) => {
+const verification = async (credentialContent: any, proof: any, checkSSLwithRegistry: boolean) => {
 	// check if proof is of type JsonWebSignature2020
-	if (proof.type !== 'JsonWebSignature2020') {
-		console.log(`❌ signature type: '${proof.type}' not supported`)
-		res.status(400).json({
-			error: `signature type: '${proof.type}' not supported`,
-			message: AppMessages.ONLY_JWS2020
-		})
-		return
-	}
-
-	// get the DID Document
-	const ddo = await Utils.getDDOfromDID(proof.verificationMethod, resolver)
-	if (!ddo) {
-		console.log(`❌ DDO not found for given did: '${proof.verificationMethod}' in proof`)
-		res.status(400).json({
-			error: `DDO not found for given did: '${proof.verificationMethod}' in proof`
-		})
-		return
-	}
-
-	// get the public keys from the DID Document
-	const { publicKeyJwk } = ddo.didDocument.verificationMethod.find((verMethod: any) => {
-		if (verMethod.controller == proof.verificationMethod) {
-			return verMethod
+	try {
+		if (proof.type !== 'JsonWebSignature2020') {
+			console.log(`❌ signature type: '${proof.type}' not supported`)
+			throw new Error(`signature type: '${proof.type}' not supported`)
 		}
-	})
 
-	const x5u = publicKeyJwk.x5u
-
-	// get the SSL certificates from x5u url
-	const certificates = (await axios.get(x5u)).data as string
-
-	if (checkSSLwithRegistry) {
-		// signature check against Gaia-x registry
-		const registryRes = await Utils.validateSslFromRegistryWithUri(x5u, axios)
-		if (!registryRes) {
-			res.status(400).json({
-				error: `Certificates validation Failed`,
-				message: AppMessages.CERT_VALIDATION_FAILED
-			})
-			return
+		// get the DID Document
+		const ddo = await Utils.getDDOfromDID(proof.verificationMethod, resolver)
+		if (!ddo) {
+			console.log(`❌ DDO not found for given did: '${proof.verificationMethod}' in proof`)
+			throw new Error(`DDO not found for given did: '${proof.verificationMethod}' in proof`)
 		}
-	}
 
-	// //check weather the public key from DDO(which is fetched from did) matches with the certificates of x5u(fetched from ddo)
-	const comparePubKey = await Utils.comparePubKeys(certificates, publicKeyJwk, jose)
-	if (!comparePubKey) {
-		console.log(`❌ Public Keys Mismatched`)
-		res.status(400).json({
-			error: `Public Keys Mismatched`,
-			message: AppMessages.PUB_KEY_MISMATCH
+		// get the public keys from the DID Document
+		const { publicKeyJwk } = ddo.didDocument.verificationMethod.find((verMethod: any) => {
+			if (verMethod.controller == proof.verificationMethod) {
+				return verMethod
+			}
 		})
-		return
+		if (!publicKeyJwk) {
+			throw new Error('publicKeyJwk not found in ddo')
+		}
+		const x5u = publicKeyJwk.x5u
+		if (!x5u) {
+			throw new Error('x5u not found in ddo')
+		}
+		// get the SSL certificates from x5u url
+		const certificates = (await axios.get(x5u)).data as string
+		if (!certificates) {
+			throw new Error('ssl certificate not found')
+		}
+		if (checkSSLwithRegistry) {
+			// signature check against Gaia-x registry
+			const registryRes = await Utils.validateSslFromRegistryWithUri(x5u, axios)
+			if (!registryRes) {
+				throw new Error('Certificate validation failed')
+			}
+		}
+
+		//check weather the public key from DDO(which is fetched from did) matches with the certificates of x5u(fetched from ddo)
+		const comparePubKey = await Utils.comparePubKeys(certificates, publicKeyJwk, jose)
+		if (!comparePubKey) {
+			console.log(`❌ Public Keys Mismatched`)
+			throw new Error('Public Key Mismatched')
+		}
+
+		// // normalize/canonize the credentialContent
+		const canonizedCredential = await Utils.normalize(
+			jsonld,
+			// eslint-disable-next-line
+			credentialContent
+		)
+
+		if (typeof canonizedCredential === 'undefined') {
+			console.log(`❌ Normalizing Credential Failed`)
+			throw new Error('Normalizing Credential Failed')
+		}
+
+		// TODO: explore the isValidityCheck here, to include the jws in the hash - GX Compliance check signature
+
+		// hash the normalized credential
+		const hash = await Utils.sha256(crypto, canonizedCredential)
+
+		// verify Signature by retrieving the hash and then comparing it
+		const verificationResult = await Utils.verify(jose, proof.jws.replace('..', `.${hash}.`), AppConst.RSA_ALGO, publicKeyJwk, hash)
+		console.log(verificationResult ? `✅ ${AppMessages.SIG_VERIFY_SUCCESS}` : `❌ ${AppMessages.SIG_VERIFY_FAILED}`)
+		return verificationResult
+	} catch (error) {
+		throw error
 	}
-
-	// // normalize/canonize the credentialContent
-	const canonizedCredential = await Utils.normalize(
-		jsonld,
-		// eslint-disable-next-line
-		credentialContent
-	)
-
-	if (typeof canonizedCredential === 'undefined') {
-		console.log(`❌ Normalizing Credential Failed`)
-		res.status(400).json({
-			error: `Normalizing Credential Failed`
-		})
-		return
-	}
-
-	// TODO: explore the isValidityCheck here, to include the jws in the hash
-
-	// hash the normalized credential
-	const hash = await Utils.sha256(crypto, canonizedCredential)
-
-	// verify Signature by retrieving the hash and then comparing it
-
-	const verificationResult = await Utils.verify(jose, proof.jws.replace('..', `.${hash}.`), AppConst.RSA_ALGO, publicKeyJwk, hash)
-	console.log(verificationResult ? `✅ ${AppMessages.SIG_VERIFY_SUCCESS}` : `❌ ${AppMessages.SIG_VERIFY_FAILED}`)
-	return verificationResult
 }
 
-async function verifyGxCompliance(credentialContent: any, res: Response) {
-	let url
-	if (credentialContent.type.includes('VerifiablePresentation')) {
-		url = credentialContent.credentialSubject.id
-	} else {
-		url = credentialContent.credentialSubject.id
+/**
+ * @dev - verify Gaia-x signature
+ * @param complianceCred
+ * @returns
+ */
+async function verifyGxCompliance(complianceCred: any) {
+	try {
+		const gxProof = complianceCred.proof
+		delete complianceCred.proof
+		const gxCred = complianceCred
+
+		const signVerify = await verification(gxCred, gxProof, false)
+
+		return signVerify
+	} catch (error) {
+		throw error
 	}
-	const participantJson = await Utils.fetchParticipantJson(url)
-	const compCred = participantJson.complianceCredential
-	const gxProof = compCred.proof
-	delete compCred.proof
-	const gxCred = compCred
-
-	const signVerify = await verification(gxCred, gxProof, res, false)
-
-	return signVerify
 }
